# PeInjector

./: MANIFEST.in  PKG-INFO  PeInjector.py  README.md  command_shellcodex64.asm  command_shellcodex86.asm  polymorphism_shellcodex64.asm  polymorphism_shellcodex86.asm  pyproject.toml  setup.cfg  setup.py  shellcode_thread.py
PeInjector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
