[metadata]
name = PeInjector
version = 1.0.1
author = Maurice Lambert
author_email = mauricelambert434@gmail.com
maintainer = Maurice Lambert
maintainer_email = mauricelambert434@gmail.com
description = This python tool injects shellcode in Windows Program Executable to backdoor it with optional polymorphism.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mauricelambert/PeInjector
project_urls = Github=https://github.com/mauricelambert/PeInjector, Documentation=https://mauricelambert.github.io/info/python/security/PeInjector.html, Python Executable=https://mauricelambert.github.io/info/python/security/PeInjector.pyz, Windows Executable=https://mauricelambert.github.io/info/python/security/PeInjector.exe
download_url = https://mauricelambert.github.io/info/python/security/PeInjector.pyz
classifiers = 
	Topic :: System
	Topic :: Security
	Environment :: Console
	Natural Language :: English
	Programming Language :: Python
	Intended Audience :: Developers
	Programming Language :: Python :: 3.8
	Operating System :: Microsoft :: Windows
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
keywords = PE, shellcode, backdoor, polymorphism, pe-injector, injection
platforms = Windows, Linux, MacOS
license = GPL-3.0 License
license_files = LICENSE.txt

[options]
include_package_data = True
python_requires = >=3.8
scripts = 
packages = 
py_modules = PeInjector
install_requires = 

[options.entry_points]
console_scripts = 
	PeInjector = PeInjector:main

[egg_info]
tag_build = 
tag_date = 0

